--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile("org.springframework:springloaded:1.2.4.RELEASE")
     //compile("net.sf.json-lib:json-lib:2.4")
     compile("org.json:json:20141113")
+    compile("org.apache.httpcomponents:httpclient:4.5")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
 
